--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Java Gradle Build (Windows & Linux)
+name: Build RubyDung JAR + Natives
 
 on:
   push:
@@ -15,22 +15,38 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up JDK 8
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 8   # 👈 IMPORTANT
+          java-version: 8
 
       - name: Grant execute permission (Linux)
         if: runner.os == 'Linux'
         run: chmod +x gradlew
 
-      - name: Build (Linux)
-        if: runner.os == 'Linux'
-        run: ./gradlew build
+      - name: Build JAR
+        run: |
+          ./gradlew clean jar extractNatives
+        shell: bash
 
-      - name: Build (Windows)
-        if: runner.os == 'Windows'
-        run: .\gradlew.bat build
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: rd-132211-${{ runner.os }}
+          path: build/libs/*.jar
+
+      - name: Zip and upload Natives
+        run: |
+          cd run
+          zip -r natives.zip natives
+        shell: bash
+
+      - name: Upload Natives artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: natives-${{ runner.os }}
+          path: run/natives.zip
